objects/ASI_MFM_Purchase_Request_Line__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_APCode__c</fullName>
        <formula>ASI_MFM_AP_Code__r.ASI_MFM_AP_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AP Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_AP_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AP Code</label>
        <referenceTo>ASI_MFM_AP_Code__c</referenceTo>
        <relationshipLabel>Purchase Request Lines</relationshipLabel>
        <relationshipName>Purchase_Request_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_A_C_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A/C Code</label>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>Purchase Request Lines</relationshipLabel>
        <relationshipName>Purchase_Request_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Account_Number__c</fullName>
        <formula>TEXT(ASI_MFM_Purchase_Request__r.ASI_MFM_Company_Code__c)  +&apos;1P&apos;+ ASI_MFM_Plan_Line_Item__r.ASI_MFM_Sub_brand_Code__r.ASI_MFM_Sub_brand_Code__c +&apos;01.&apos;+ ASI_MFM_Plan_Line_Item__r.ASI_MFM_A_C_Code__r.ASI_MFM_A_C_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Actual_Spending_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>In Local Currency</description>
        <label>Actual Spending Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Amount_in_Local_Currency__c</fullName>
        <formula>ASI_MFM_Estimated_PR_budget__c * ASI_MFM_Purchase_Request__r.ASI_MFM_Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated PR budget in Local Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Basic_POSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Basic POSM</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>ASI_MFM_SKU_Code__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>KR MFM SKU</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_SKU_Code__c.Name</field>
                <operation>startsWith</operation>
                <value>9</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Purchase Request Lines</relationshipLabel>
        <relationshipName>Purchase_Request_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Consumer_Prize__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consumer Prize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Purchase Request Lines</relationshipLabel>
        <relationshipName>Purchase_Request_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Estimated_PR_budget__c</fullName>
        <label>Estimated PR budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_KR_Subledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subledger</label>
        <referenceTo>ASI_TnE_Branch_Channel__c</referenceTo>
        <relationshipLabel>Purchase Request Lines</relationshipLabel>
        <relationshipName>prLine_Subledger</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_KR_countAttach__c</fullName>
        <label>Count Attach</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Amount_in_PR_Currency__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PO Amount in PR Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Line Item</label>
        <referenceTo>ASI_MFM_Plan_Line_Item__c</referenceTo>
        <relationshipLabel>Purchase Request Lines</relationshipLabel>
        <relationshipName>Purchase_Request_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PurchaseRequests_Line_ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>Purchase Requests Line External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_MFM_Purchase_Request__c</fullName>
        <label>Purchase Request</label>
        <referenceTo>ASI_MFM_Purchase_Request__c</referenceTo>
        <relationshipLabel>Purchase Request Lines</relationshipLabel>
        <relationshipName>Purchase_Request_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Rest_Amount__c</fullName>
        <formula>ASI_MFM_Estimated_PR_budget__c  - ASI_MFM_PO_Amount_in_PR_Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rest Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_brand_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Purchase Request Lines</relationshipLabel>
        <relationshipName>Purchase_Request_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_ledger__c</fullName>
        <label>Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>ASI_MFM_Tax_Code__c</referenceTo>
        <relationshipLabel>Purchase Request Lines</relationshipLabel>
        <relationshipName>Purchase_Request_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>BX</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>DY</fullName>
                </value>
                <value>
                    <fullName>DZ</fullName>
                </value>
                <value>
                    <fullName>EA</fullName>
                </value>
                <value>
                    <fullName>GM</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KG</fullName>
                </value>
                <value>
                    <fullName>KM</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>LB</fullName>
                </value>
                <value>
                    <fullName>LT</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>ST</fullName>
                </value>
                <value>
                    <fullName>TN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Purchase Request Line</label>
    <nameField>
        <displayFormat>PRL{00000}</displayFormat>
        <label>Purchase Request line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Request Lines</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_KR_Purchase_Request_Line</fullName>
        <active>true</active>
        <label>KR Purchase Request Line</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>